--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Poppins:wght@300;400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap');
 
 *{
     padding: 0;
@@ -8,21 +8,21 @@
     box-sizing: border-box;
 }
 
-img {
+img{
     width: 100%;
     display: flex;
 }
 
-a {
+a{
     text-decoration: none;
 }
 
-body {
+body{
     font-family: 'Poppins', sans-serif;
     background-color: #18181B;
 }
 
-nav {
+nav{
     max-width: 1200px;
     margin: auto;
     padding: 2rem 1rem;
@@ -32,11 +32,11 @@ nav {
     gap: 2rem;
 }
 
-.nav-logo {
+.nav-logo{
     max-width: 100px;
 }
 
-.nav-links {
+.nav-links{
     list-style: none;
     display: flex;
     align-items: center;
@@ -75,22 +75,22 @@ nav {
 }
 
 .btn:hover{
-    background-color: #1d4ed8;
+    background-color: #1e40af;
 }
 
-.container {
+.container{
     max-width: 1200px;
     margin: auto;
     padding: 5rem 2rem;
 }
 
-.blur {
+.blur{
     position: absolute;
     box-shadow: 0 0 1000px 50px #1d4ed8;
     z-index: -100;
 }
 
-header {
+header{
     position: relative;
     padding-top: 2rem;
     display: grid;
@@ -99,7 +99,7 @@ header {
     gap: 2rem;
 }
 
-header .content h4 {
+header .content h4{
     margin-bottom: 1rem;
     color: #ccc;
     font-size: 1rem;
@@ -142,12 +142,12 @@ header .image::before{
     z-index: -100;
 }
 
-header .image img {
+header .image img{
     max-width: 600px;
     margin: auto;
 }
 
-section .header {
+section .header{
     margin-bottom: 1rem;
     color: #fff;
     text-align: center;
@@ -192,7 +192,7 @@ section .header {
     font-weight: 600;
 }
 
-.features .card p {
+.features .card p{
     color: #ccc;
     margin-bottom: 1rem;
 }
@@ -203,52 +203,183 @@ section .header {
 }
 
 .features .card a:hover{
+    color: #1e40af;
+}
+
+.sub-header{
+    max-width: 600px;
+    margin: auto;
+    text-align: center;
+    color: #ccc;
+}
+
+.Projects{
+    margin-top: 4rem;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
+}
+
+.Projects .card{
+    padding: 3rem 2rem;
+    background-color: #27272a;
+    display: flex;
+    flex-direction: column;
+    border: 2px solid transparent;
+    border-radius: 15px;
+    transition: all 0.3s ease;
+}
+
+.Projects .card:hover{
+    background-color: #323232;
+    border-color: #fff;
+}
+
+.Projects .card .content{
+    flex: 1;
+    margin-bottom: 2rem;
+}
+
+.Projects .card h4{
+    margin-bottom: 1rem;
+    color: #fff;
+    font-size: 1.2rem;
+    font-weight: 500;
+}
+
+.Projects .card h3{
+    color: #fff;
+    padding-bottom: 1rem;
+    margin-bottom: 2rem;
+    font-size: 2rem;
+    font-weight: 600;
+    border-bottom: 2px dashed #fff;
+}
+
+.Projects .card p{
+    color: #fff;
+    margin-bottom: 0.75rem;
+}
+
+.Projects .card p i{
+    color: #ccc;
+    font-size: 1.2rem;
+    margin-right: 0.3rem;
+}
+
+.Projects .card button{
+    color: #fff;
+    background-color: transparent;
+    border: 2px solid #fff;
+}
+
+.Projects .card button:hover{
+    background-color: #1e40af;
+    border-color: #1e40af;
+}
+
+footer{
+    position: relative;
+    display: grid;
+    grid-template-columns: 400px repeat(3, 1fr);
+    gap: 2rem;
+}
+
+footer .column .logo{
+    max-width: 100px;
+    margin-bottom: 2rem;
+}
+
+footer .column p{
+    color: #ccc;
+    margin-bottom: 0.99rem;
+    text-align: left;
+
+}
+
+footer .column .socials{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+footer .column .socials a{
+    color: #ccc;
+    border: 1px solid #ccc;
+    padding: 5px 10px;
+    font-size: 1.25rem;
+    border-radius: 100%;
+    transition: all 0.3s ease;
+}
+
+footer .column .socials a:hover{
+    color: #fff;
+    background-color: #1d4ed8;
+    border-color: #1d4ed8;
+}
+
+footer .column h4{
+    color: #fff;
+    margin-bottom: 2rem;
+    font-size: 1.2rem;
+    font-weight: 500;
+}
+
+footer .column > a{
+    display: block;
+    color: #ccc;
+    margin-bottom: 1rem;
+    transition: all 0.3s ease;
+}
+
+footer .column > a:hover{
     color: #1d4ed8;
-    }
+}
 
-    .sub-header{
-        max-height: 600px;
-        margin: auto;
-        text-align: center;
-        color: #ccc;
-    }
+.copyright{
+    max-width: 1200px;
+    margin: auto;
+    padding: 1rem;
+    color: #fff;
+    font-size: 0.8rem;
+    text-align: center;
+}
 
+@media (width < 900px){
+    .nav-links{
+        display: none;
+    }
+    header{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    header .image{
+        grid-area: 1/1/2/2;
+    }
+    .features{
+        grid-template-columns: repeat(2, 1fr);
+    }
     .pricing{
-        margin-top: 4rem;
-        display: grid;
-        grid-template-columns:repeat(3, 1fr);
-        gap: 2rem;
+        grid-template-columns: repeat(2, 1fr);
+    }
+    footer{
+        grid-template-columns: 1fr 200px;
+    }
+}
+
+@media (width < 600px){
+    header .image::before{
+        display: none;
     }
 
-    .pricing .card{
-        padding: 3rem 2rem;
-        background-color: #27272a;
-        display: flex;
-        flex-direction: column;
-        border: 2px solid transparent;
-        border-radius: 15px;
-        transition: all 0.3s ease;
+    .features{
+        grid-template-columns: repeat(1, 1fr);
     }
 
-    .pricing .card:hover{
-        background-color: #323232;
-        color: #fff;
+    .Projects{
+        grid-template-columns: repeat(1, 1fr);
     }
 
-    .pricing .card .content{
-        flex: 1;
-        margin-bottom: 2rem;
+    footer{
+        grid-template-columns: 1fr 150px;
     }
-
-    .pricing .card h4{
-        margin-bottom: 1rem;
-        color: #fff;
-        font-size: 1.2rem;
-        font-weight: 500;
-    }
-
-    .pricing .card h3{
-        color: #fff;
-        padding-bottom: 1rem;
-        margin-bottom: 2rem;
-    }
+}
